--- a/orion-ios-school/Base.lproj/Main.storyboard
+++ b/orion-ios-school/Base.lproj/Main.storyboard
@@ -1,24 +1,90 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="orion_ios_school" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s6n-bg-UsO">
+                                <rect key="frame" x="184.5" y="490" width="45" height="30"/>
+                                <state key="normal" title="Check"/>
+                                <connections>
+                                    <action selector="pressedButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="yR2-nv-nX6"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" borderStyle="roundedRect" placeholder="  Enter your guess" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="eir-wV-kas">
+                                <rect key="frame" x="68" y="436" width="271" height="34"/>
+                                <attributedString key="attributedText"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
+                            </textField>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VRZ-GI-cd6">
+                                <rect key="frame" x="175" y="598" width="64" height="30"/>
+                                <state key="normal" title="Try Again"/>
+                                <connections>
+                                    <action selector="resetGame:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ucQ-vh-1za"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="greeting" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="om0-1S-Xqq">
+                                <rect key="frame" x="95" y="237" width="224" height="80"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="uOX-Lx-rSd"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="result" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zrh-Xi-xv4">
+                                <rect key="frame" x="185.5" y="543" width="43" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="s6n-bg-UsO" firstAttribute="top" secondItem="eir-wV-kas" secondAttribute="bottom" constant="20" id="0Ps-wn-7fd"/>
+                            <constraint firstItem="om0-1S-Xqq" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="193" id="1Lw-0r-f89"/>
+                            <constraint firstItem="Zrh-Xi-xv4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="3qx-AS-eUZ"/>
+                            <constraint firstItem="eir-wV-kas" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="436" id="3zq-io-cD3"/>
+                            <constraint firstItem="VRZ-GI-cd6" firstAttribute="top" secondItem="Zrh-Xi-xv4" secondAttribute="bottom" constant="34.5" id="9zs-Um-Sp1"/>
+                            <constraint firstItem="Zrh-Xi-xv4" firstAttribute="centerX" secondItem="VRZ-GI-cd6" secondAttribute="centerX" id="Cpp-n6-q17"/>
+                            <constraint firstItem="Zrh-Xi-xv4" firstAttribute="leading" secondItem="s6n-bg-UsO" secondAttribute="leading" constant="1" id="EK7-n8-leH"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="eir-wV-kas" secondAttribute="trailing" constant="75" id="H6a-YW-CDY"/>
+                            <constraint firstItem="Zrh-Xi-xv4" firstAttribute="centerX" secondItem="s6n-bg-UsO" secondAttribute="centerX" id="OOT-cu-5Ia"/>
+                            <constraint firstItem="Zrh-Xi-xv4" firstAttribute="top" secondItem="s6n-bg-UsO" secondAttribute="bottom" constant="23" id="TDn-ED-Bpi"/>
+                            <constraint firstItem="eir-wV-kas" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="68" id="Yjm-fd-LKh"/>
+                            <constraint firstItem="s6n-bg-UsO" firstAttribute="centerX" secondItem="om0-1S-Xqq" secondAttribute="centerX" id="ZdD-KS-8BW"/>
+                            <constraint firstItem="om0-1S-Xqq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="95" id="y5n-gY-AL0"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="checkAnswerButton" destination="s6n-bg-UsO" id="eSA-WK-bIq"/>
+                        <outlet property="greeting" destination="om0-1S-Xqq" id="A3S-w3-ont"/>
+                        <outlet property="resetButton" destination="VRZ-GI-cd6" id="i5X-ZY-XfL"/>
+                        <outlet property="result" destination="Zrh-Xi-xv4" id="0QX-9D-0bq"/>
+                        <outlet property="userInputNum" destination="eir-wV-kas" id="FfV-Jy-IkZ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-23.188405797101453" y="57.589285714285708"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
