--- a/orion-ios-school/Base.lproj/LaunchScreen.storyboard
+++ b/orion-ios-school/Base.lproj/LaunchScreen.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,29 +15,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Guess The Number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eoU-FI-6uH">
-                                <rect key="frame" x="133" y="378" width="148" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-swift-120" translatesAutoresizingMaskIntoConstraints="NO" id="jsG-To-SSh">
+                                <rect key="frame" x="87" y="389" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="jsG-To-SSh" secondAttribute="height" multiplier="15:8" id="Wqb-GM-dIq"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.80412169765349228" green="0.89012478190189148" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="eoU-FI-6uH" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="DGz-RO-f8q"/>
-                            <constraint firstItem="eoU-FI-6uH" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="334" id="jHH-pm-m4t"/>
+                            <constraint firstItem="jsG-To-SSh" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="l2O-1E-MXY"/>
+                            <constraint firstItem="jsG-To-SSh" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="ude-kO-x2P"/>
+                            <constraint firstItem="jsG-To-SSh" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="height" multiplier="15:56" id="zHy-r4-9Fr"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="icons8-swift-120" width="120" height="120"/>
     </resources>
 </document>
